objects/APTS_Market_Allocation_Data__c.object
<CustomObject>
    <description>Object  will store Market Allocation data</description>
    <fields>
        <fullName>APTS_BAL_ID__c</fullName>
        <description>Business Activity Location Id</description>
        <label>BAL ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country_Code__c</fullName>
        <description>Holds Country Code</description>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DeleteDate__c</fullName>
        <label>DeleteDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_DeleteFlag__c</fullName>
        <label>DeleteFlag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Market_Allocation_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id from ABB Master Data</description>
        <externalId>true</externalId>
        <label>Market Allocation External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_ID_Level_1__c</fullName>
        <label>Product Line ID Level 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_ID__c</fullName>
        <description>Maps to Product Line ID attribute in Product2</description>
        <label>Product Line ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_Location_ID__c</fullName>
        <label>Product Line Location ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Market Allocation Data</label>
    <nameField>
        <displayFormat>MRKT-ALLCTN-DATA-{000000}</displayFormat>
        <label>Market Allocation Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Allocation Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>